# codex-python-test

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
notebooks/: correlation_analysis.ipynb  correlation_analysis_investpy.ipynb  historical_price.ipynb
src/codex_python_test/: __init__.py
