[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-python-test"
version = "0.1.0"
description = "Professional Python project scaffold with finance notebook"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "example@example.com" }
]
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "yfinance>=0.2.28",
    "jupyter>=1.0",
    "ipywidgets>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "mypy>=1.8",
]
